# d4py

./: .gitignore  README.md  setup.cfg  setup.py
d4py/: Element.py  ExperimentalSettings.py  FittingModels.py  FourierTransforms.py  InputOutput.py  MiscelaneousCalculations.py  PhysicalMagnitudes.py  __init__.py  d4creg_script.py  d4nifit.py  d4treat.py  lib_Vanadium.py  mc.f  mc.pyf  readD4.py  readParamD4.py
examples/: d4creg_script.py
modules/: Element.py  ExperimentalSettings.py  FittingModels.py  MiscelaneousCalculations.py  d4creg_script.py  d4nifit.py  d4treat.py  readParamD4.py
