[metadata]
name = d4py
version = 1.0.0
author = Gabriel Cuello, Jose Robledo, Matias Illari, Maria Sanchez
author_email = j.robledo@fz-juelich.de
description = D4 instrument at ILL analysis package
keywords =
    fortran
    f2py
classifiers =
    Operating System :: OS Independent
    Programming Language :: Fortran
    Programming Language :: Python :: 3
# license_files =
#     LICENSE.txt
# long_description = file: README.md
# long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
install_requires =
    numpy >= 1.16
    h5py
